# opencv-cpp

./: .gitignore  README.md
01-hello-world/: CMakeLists.txt  Makefile  hello-world  hello-world.cpp
02-videoio/: CMakeLists.txt  videoio.cpp
