cmake_minimum_required(VERSION 3.5)
project(hello-world)
set(SOURCE_FILES hello-world.cpp)
add_executable(${PROJECT_NAME} ${SOURCE_FILES})
if(DEFINED ENV{OPENCV_INSTALL_DIR})
    find_package(OpenCV REQUIRED PATHS $ENV{OPENCV_INSTALL_DIR} NO_DEFAULT_PATH)
else()
    message("OPENCV_INSTALL_DIR not set, searching in default location(s)")
    find_package(OpenCV REQUIRED)
endif()
include_directories(${OpenCV_INCLUDE_DIRS})
target_link_libraries(${PROJECT_NAME} ${OpenCV_LIBS})